# promenade-article-indexer

./: .gitignore  LICENSE  README.md  pyproject.toml
article_indexer/: __init__.py  __main__.py  config.py
article_indexer/docs/: promenade-markdown-spec.md
article_indexer/traverse/: by_direction.py  condies.py  general.py  process.py
article_indexer/types/: yaml_type.py
article_indexer/utils/: debug.py  debugs.py  errors.py  reduce.py
article_indexer/validate/: directory.py  frontmatter.py  index.py
docs/: DEVEL.md  glossary.md  note.md  pidx-depth.md  pidx-metadata.md  promenade-markdown-spec.md
docs/indexing/: pidx-depth.md  pidx-implication.md  pidx-metadata.md  pidx-reserved.md
docs/markdown/: promenade-markdown-spec.md
tests/: __init__.py  conftest.py  test_config.py  test_debugs.py  test_frontmatter.py  test_shortcircuit.py
tests/data/markdown/invalid/: json_frontmatter_1.md  json_frontmatter_2.md  json_frontmatter_3.md  toml_frontmatter_1.md  toml_frontmatter_2.md  toml_frontmatter_3.md  yaml_frontmatter_1.md  yaml_frontmatter_2.md  yaml_frontmatter_3.md
tests/data/markdown/valid/: edge_empty_json_frontmatter.md  edge_empty_toml_frontmatter.md  edge_empty_yaml_frontmatter.md  no_frontmatter.md  with_json_frontmatter.md  with_toml_frontmatter.md  with_yaml_frontmatter.md
tests/fixtures/: debugs.py
