# pep-0621

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# The registry treat it the same as 'article_indexer'
[project]
name = "article-indexer"
description = "Static indexer, internal tooling for Promenade"
dynamic = ["version"]
authors = [{ name = "Luke Yoo", email = "w.lukeyoo@gmail.com" }]
maintainers = [{ name = "Luke Yoo", email = "w.lukeyoo@gmail.com" }]
license = { text = "BSD-3-Clause" }
keywords = ["promenade", "static-indexing"]
dependencies = ["dataclasses-json==0.6.7", "packaging==24.2"]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0", # linter
    "mypy>=0.900",   # type checker
    # standalone
    "coverage",
]

test = [
    "pytest>=6.0.0",
    # plugin of coverage.py work with pytest
    "pytest-cov>=3.0.0",
]

[project.scripts]
article-indexer = "article_indexer.cmdline:main_cli" # Create a CLI executable

[project.urls]
repository = "https://github.com/micttyoid/promenade-article-indexer"
#changelog = ""
#homepage = ""
#documentation = ""

[tool.coverage.run]
omit = [
    # May omit later at some maturity or by --cov-ignore=tests/fixtures/*
    #"tests/fixtures/*", "tests/conftest.py"
]

[tool.setuptools.packages.find]
#where = ["src"]               # Look for packages in the "src" directory
exclude = ["scripts", "tests"] # Exclude theses
include = ["article_indexer*"] # Include matching
